# ROS_package_template_python

./: CMakeLists.txt  README.md  package.xml  setup.py
msg/: PackageMsg.msg
scripts/: node
src/package_name/: package_src.py
srv/: PackageSrv.srv
